--- a/app/src/main/res/layout-sw360dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw360dp/item_timenote.xml
@@ -50,271 +50,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/timenote_vp"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
+    <include
         android:layout_marginTop="8dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_pic_user_imageview" />
-
-    <TextView
-        android:id="@+id/timenote_title"
+        app:layout_constraintTop_toBottomOf="@id/timenote_pic_user_imageview"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/gradient_timenote_top"
-        android:fontFamily="sans-serif-light"
-        android:paddingHorizontal="16dp"
-        android:paddingTop="16dp"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1.5"
-        android:text="BEACH PARTY"
-        android:textAllCaps="true"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/timenote_vp" />
-
-    <View
-        android:id="@+id/timenote_time_gradient"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/gradient_timenote_bottom"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
-        app:layout_constraintEnd_toEndOf="@id/timenote_vp"
-        app:layout_constraintStart_toStartOf="@id/timenote_vp"
-        app:layout_constraintTop_toTopOf="@id/separator_2" />
-
-    <TextView
-        android:id="@+id/timenote_year"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:gravity="center"
-        android:layout_marginEnd="12dp"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1.5"
-        android:text="2020"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@id/separator_1"
-        app:layout_constraintEnd_toStartOf="@id/separator_1"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintTop_toTopOf="@id/separator_1" />
-
-    <TextView
-        android:id="@+id/separator_1"
-        android:layout_width="2dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="135dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/custom"
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
-        app:layout_constraintStart_toStartOf="@id/timenote_vp" />
-
-    <TextView
-        android:id="@+id/timenote_day_month"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:gravity="center"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1.5"
-        android:text="11 Aug\n15:30"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        app:layout_constraintEnd_toStartOf="@id/separator_2"
-        app:layout_constraintStart_toEndOf="@id/separator_1"
-        app:layout_constraintTop_toTopOf="@id/separator_2" />
-
-    <TextView
-        android:id="@+id/separator_2"
-        android:layout_width="2dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/custom"
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
-        app:layout_constraintEnd_toEndOf="@id/timenote_vp" />
-
-    <TextView
-        android:id="@+id/timenote_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:gravity="center"
-        android:layout_marginStart="12dp"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1.5"
-        android:text="12:30"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        app:layout_constraintStart_toEndOf="@id/separator_2"
-        app:layout_constraintTop_toTopOf="@id/separator_2" />
-
-    <TextView
-        android:visibility="invisible"
-        android:id="@+id/timenote_in_label"
-        android:fontFamily="sans-serif-light"
-        android:textSize="16sp"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1.5"
-        android:textColor="@android:color/white"
-        tools:text="In 2 days and 23 hours"
-        app:layout_constraintEnd_toEndOf="@id/timenote_vp"
-        app:layout_constraintStart_toStartOf="@id/timenote_vp"
-        app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        app:layout_constraintTop_toTopOf="@id/separator_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/timenote_buy"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorYellow"
-        android:fontFamily="sans-serif-light"
-        android:gravity="end"
-        android:visibility="gone"
-        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_white_24"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="4dp"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_vp" />
-
-    <ImageView
-        android:id="@+id/timenote_comment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:src="@drawable/ic_commentaires"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_buy" />
-
-    <ImageView
-        android:id="@+id/timenote_share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:src="@drawable/ic_partage_sans_fleche_ok"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_comment"
-        app:layout_constraintStart_toEndOf="@id/timenote_comment"
-        app:layout_constraintTop_toTopOf="@id/timenote_comment" />
-
-    <me.relex.circleindicator.CircleIndicator3
-        android:id="@+id/timenote_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="12dp"
-        android:layout_marginHorizontal="4dp"
-        app:ci_drawable="@drawable/dot_selected"
-        app:ci_drawable_unselected="@drawable/dot_unselected"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_comment"
-        app:layout_constraintEnd_toStartOf="@id/separator_2"
-        app:layout_constraintStart_toEndOf="@id/separator_1"
-        app:layout_constraintTop_toTopOf="@id/timenote_comment" />
-
-    <ImageView
-        android:id="@+id/timenote_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_ajout_cal"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_comment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/timenote_comment" />
-
-    <LinearLayout
-        android:id="@+id/timenote_fl"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
-        app:layout_constraintStart_toStartOf="@id/timenote_comment"
-        app:layout_constraintTop_toBottomOf="@id/timenote_comment">
-
-        <ImageView
-            android:id="@+id/timenote_pic_participant_one"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="-8dp"
-            android:src="@drawable/beach" />
-
-        <ImageView
-            android:id="@+id/timenote_pic_participant_two"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="-8dp"
-            android:src="@drawable/beach" />
-
-        <ImageView
-            android:id="@+id/timenote_pic_participant_three"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/beach" />
-
-        <TextView
-            android:id="@+id/timenote_added_by"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:textColor="@color/colorText"
-            android:textSize="13sp" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/timenote_username_desc"
-        android:layout_width="0dp"
-        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:breakStrategy="simple"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:textColor="@color/colorText"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="@id/timenote_comment"
-        app:layout_constraintTop_toBottomOf="@id/timenote_fl"
-        tools:targetApi="m"
-        tools:text="#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party" />
-
-    <TextView
-        android:id="@+id/timenote_see_more"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/see_more"
-        android:textColor="@color/colorText"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="@id/timenote_comment"
-        app:layout_constraintTop_toBottomOf="@id/timenote_username_desc" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        layout="@layout/item_timenote_root"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
