--- a/app/src/main/res/navigation/navigation_graph_tab_home.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_home.xml
@@ -85,7 +85,16 @@
         android:id="@+id/detailedTimenote"
         android:name="com.timenoteco.timenote.view.homeFlow.DetailedTimenote"
         android:label="fragment_detailed_timenote"
-        tools:layout="@layout/fragment_detailed_fragment" />
+        tools:layout="@layout/fragment_detailed_fragment" >
+        <action
+            android:id="@+id/action_detailedTimenote_to_profile"
+            app:destination="@id/profile" />
+        <argument android:name="from"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_detailedTimenote_to_createTimenote"
+            app:destination="@id/createTimenote" />
+    </fragment>
     <fragment
         android:id="@+id/profile"
         android:name="com.timenoteco.timenote.view.profileFlow.Profile"
