--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -343,7 +343,7 @@
                         android:layout_marginTop="8dp"
                         android:text="@string/from"
                         android:textSize="14sp"
-                        android:textColor="@color/colorTextSecondary"
+                        android:textColor="@color/colorText"
                         app:layout_constraintTop_toBottomOf="@id/when_label"
                         app:layout_constraintEnd_toEndOf="@id/when_label"
                         android:layout_width="wrap_content"
@@ -356,7 +356,7 @@
                         android:layout_marginTop="8dp"
                         android:text="@string/to"
                         android:textSize="14sp"
-                        android:textColor="@color/colorTextSecondary"
+                        android:textColor="@color/colorText"
                         app:layout_constraintTop_toBottomOf="@id/from_label"
                         app:layout_constraintEnd_toEndOf="@id/when_label"
                         android:layout_width="wrap_content"
