--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -225,12 +225,14 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/card_line_6"
                 app:layout_constraintTop_toBottomOf="@id/push_notification_certified_cl"
                 style="@style/AppTheme.Divider.Toolbar"
                 tools:ignore="MissingConstraints" />
 
             <TextView
+                android:visibility="gone"
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_notification_manager"
                 android:background="@color/colorElevated"
@@ -256,58 +258,97 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-            <TextView
-                android:fontFamily="sans-serif-light"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_marginTop="8dp"
-                android:id="@+id/profile_settings_date_format"
                 android:background="@color/colorElevated"
-                android:padding="16dp"
-                android:textColor="@color/colorText"
-                android:text="@string/timenote_date_format"
+                android:id="@+id/profile_settings_date_format"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/default_settings_label"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/card_line_4"
-                app:layout_constraintTop_toBottomOf="@id/profile_settings_date_format"
-                style="@style/AppTheme.Divider.Toolbar"
-                tools:ignore="MissingConstraints" />
+                <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:fontFamily="sans-serif-light"
+                    android:padding="16dp"
+                    android:textColor="@color/colorText"
+                    android:text="@string/timenote_date_format"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:text="@string/date"
+                    android:textColor="@color/colorText"
+                    android:fontFamily="sans-serif-light"
+                    android:padding="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
             <TextView
                 android:fontFamily="sans-serif-light"
-                android:id="@+id/profile_settings_timenote_format"
-                android:background="@color/colorElevated"
-                android:padding="16dp"
+                android:id="@+id/default_settings_creation_label"
                 android:textColor="@color/colorText"
-                android:text="@string/timenote_visibility_format"
+                android:text="@string/default_settings_at_creation"
+                android:textAllCaps="true"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/card_line_4"
-                android:layout_width="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/profile_settings_date_format"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="16dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:background="@color/colorElevated"
+                    android:id="@+id/profile_settings_timenote_format"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/default_settings_creation_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:padding="16dp"
+                        android:fontFamily="sans-serif-light"
+                        android:textColor="@color/colorText"
+                        android:text="@string/timenote_visibility_format"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:text="Only me"
+                        android:textColor="@color/colorText"
+                        android:fontFamily="sans-serif-light"
+                        android:padding="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
             <TextView
+                android:visibility="gone"
                 android:id="@+id/card_line_5"
                 app:layout_constraintTop_toBottomOf="@id/profile_settings_timenote_format"
                 style="@style/AppTheme.Divider.Toolbar"
                 tools:ignore="MissingConstraints" />
-
-
-            <TextView
-                android:fontFamily="sans-serif-light"
-                android:id="@+id/profile_settings_timenote_visibility"
-                android:background="@color/colorElevated"
-                android:padding="16dp"
-                android:textColor="@color/colorText"
-                android:text="@string/timenote_visibility"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/card_line_5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
 
             <TextView
                 android:fontFamily="sans-serif-light"
@@ -316,7 +357,7 @@
                 android:text="@string/others"
                 android:textAllCaps="true"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/profile_settings_timenote_visibility"
+                app:layout_constraintTop_toBottomOf="@id/card_line_5"
                 android:layout_marginTop="24dp"
                 android:layout_marginStart="16dp"
                 android:layout_width="wrap_content"
