--- a/app/src/main/res/navigation/navigation_graph_tab_profile.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_profile.xml
@@ -238,5 +238,11 @@
         <action
             android:id="@+id/action_detailedTimenote_to_profile"
             app:destination="@id/profile" />
+        <argument
+            android:name="from"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_detailedTimenote_to_createTimenote"
+            app:destination="@id/createTimenote" />
     </fragment>
 </navigation>
